# local-http-server-for-TEngine

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker.yml  release.yml
docs/superpowers/plans/: 2026-05-02-remote-server-plan.md
docs/superpowers/specs/: 2026-05-02-remote-server-design.md
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.offline.yml  docker-compose.yml
server/src/: api.rs  auth.rs  config.rs  main.rs  serve.rs  storage.rs  ws.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  server.rs  sync.rs
src/components/: HelpModal.vue  LocalMode.vue  RemoteMode.vue  SettingsDialog.vue
src/styles/: main.css
web-admin/: index.html  package-lock.json  package.json  vite.config.ts
web-admin/src/: App.vue
web-admin/src/api/: remote.ts
web-admin/src/components/: LogPanel.vue  ProjectManager.vue  RemoteLogin.vue  SettingsDialog.vue
web-admin/src/styles/: main.css
