[package]
name = "tengine-http-server"
version = "1.0.0"
description = "TEngine Local Asset Server with GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "tengine_http_server_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
notify = "6"
log = "0.4"
env_logger = "0.11"
percent-encoding = "2"

[target.'cfg(windows)'.dependencies]
junction = "1"
